--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.13.0",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
 }
